--- a/precss/news.less
+++ b/precss/news.less
@@ -3,8 +3,13 @@
         .news{
             .item {
                 .size(5);
+                display: flex;
+                flex-direction: column;
+                .green_block {
+                    margin-top: auto;
+                }
             }
-
+            
         }
     }
 }
