--- a/precss/style.less
+++ b/precss/style.less
@@ -4,6 +4,7 @@
 @import "ThemHelp.less";
 @import "ThemHelping.less";
 @import "news.less";
+@import "programms.less";
 .reset();
 .debug {
     //.debug(rgba(255,255,255,0.5), 1px solid #cc0000);
