--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,51 @@
   margin-top: auto;
 }
 
+.programms {
+  margin-top: 50px;
+}
+
+.programms .wrapper .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.programms .wrapper .container .item {
+  width: 32%;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+
+.programms .wrapper .container .item .img {
+  text-align: center;
+  display: block;
+}
+
+.programms .wrapper .container .item .img img {
+  transition: opacity, 300ms;
+}
+
+.programms .wrapper .container .item .img img:hover {
+  opacity: 0.7;
+}
+
+.programms .wrapper .container .item .orange_block {
+  width: 95%;
+  text-align: center;
+  background: #f78161;
+  color: #fff;
+  font: 26px lora;
+  padding: 15px 10px;
+  transform: translateY(-32px) skew(-30deg) translateX(-15px);
+}
+
+.programms .wrapper .container .item .orange_block span {
+  display: inline-block;
+  transform: skew(30deg);
+}
+
 body,
 div,
 dl,
@@ -460,6 +505,14 @@ footer .wrapper .menu ul li a:hover {
 }
 
 @media screen and (max-width: 960px) {
+  .programms .wrapper .container .item {
+    width: 42%;
+  }
+
+  .programms .wrapper .container .item .orange_block {
+    font: 26px lora;
+  }
+
   .wrapper {
     padding-left: 20px;
     padding-right: 20px;
@@ -477,6 +530,14 @@ footer .wrapper .menu ul li a:hover {
 @media screen and (max-width: 870px) {
   .children .wrapper .container .item {
     width: calc(83.33333333333334% - 30px);
+  }
+
+  .programms .wrapper .container .item {
+    width: 50%;
+  }
+
+  .programms .wrapper .container .item .orange_block {
+    font: 18px lora;
   }
 
   .wrapper {
@@ -566,6 +627,10 @@ footer .wrapper .menu ul li a:hover {
 }
 
 @media screen and (max-width: 560px) {
+  .programms .wrapper .container .item {
+    width: 95%;
+  }
+
   .wrapper {
     padding-left: 15px;
     padding-right: 15px;
