--- a/precss/style.less
+++ b/precss/style.less
@@ -4,7 +4,8 @@
 @import "ThemHelp.less";
 @import "ThemHelping.less";
 @import "news.less";
-@import "programms.less";
+@import "ThemHelpingByOne.less";
+
 .reset();
 .debug {
     //.debug(rgba(255,255,255,0.5), 1px solid #cc0000);
@@ -18,6 +19,7 @@ body {
     background: #fff;
 
 }
+
 .menuS {
     display: none;
     .sm-block({display: block});
