--- a/precss/style.less
+++ b/precss/style.less
@@ -5,6 +5,7 @@
 @import "ThemHelping.less";
 @import "news.less";
 @import "ThemHelpingByOne.less";
+@import "programms.less";
 
 .reset();
 .debug {
