--- a/precss/style.less
+++ b/precss/style.less
@@ -20,7 +20,19 @@ body {
     background: #fff;
 
 }
-
+.button_up {
+    background: @main_color;
+    width: 45px;
+    height: 55px;
+    padding: 0 5px;
+    position: fixed;
+    right: 40px;
+    bottom: 3%;
+    border:1px solid rgba(148, 75, 56, 0.8);
+    img {
+        margin-top: 12px;
+    }
+}
 .menuS {
     display: none;
     .sm-block({display: block});
